Bug 597183, less squishy popups

--- a/media/css/zamboni/zamboni.css
+++ b/media/css/zamboni/zamboni.css
@@ -2605,7 +2605,7 @@ label > .optional {
 #add-to-collection form {
     margin-bottom: 0;
 }
-#add-to-collection.new-collection #id_description {
+#add-to-collection #id_description {
     height: 6em;
 }
 
